--- a/src/Badger.Data/Badger.Data.csproj
+++ b/src/Badger.Data/Badger.Data.csproj
@@ -1,8 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard1.3</TargetFramework>
     <LangVersion>7.1</LangVersion>
+    <PackageVersion>1.0.0</PackageVersion>
+    <PackageId>Badger.Data</PackageId>
+    <AssemblyName>Badger.Data</AssemblyName>
+    <Description>Simple Database access</Description>
+    <Authors>Tim Barker;Matt Holland</Authors>
+    <PackageProjectUrl>https://github.com/timbarker/Badger.Data</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/timbarker/Badger.Data/blob/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="System.Data.Common" Version="4.3.0" />
+  </ItemGroup>
 </Project>
