--- a/src/Badger.Data/Badger.Data.csproj
+++ b/src/Badger.Data/Badger.Data.csproj
@@ -11,6 +11,6 @@
     <PackageLicenseUrl>https://github.com/timbarker/Badger.Data/blob/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="System.Data.Common" Version="4.3.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.4.0" />
   </ItemGroup>
 </Project>
