--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,12 @@ script:
   - dotnet build src/Badger.Data.sln -c Release 
   - dotnet test src/Badger.Data.Tests/Badger.Data.Tests.csproj -c Release --filter ExcludeFromTravis!=True
   - dotnet pack src/Badger.Data/Badger.Data.csproj -c Release -o nuget -p:PackageVersion=$PACKAGE_VERSION -p:FileVersion=$PACKAGE_VERSION
+  - dotnet pack src/Badger.Data.Postgres/Badger.Data.Postgres.csproj -c Release -o nuget -p:PackageVersion=$PACKAGE_VERSION -p:FileVersion=$PACKAGE_VERSION
 deploy:
   skip_cleanup: true
   provider: script
-  script: dotnet nuget push src/Badger.Data/nuget/Badger.Data.*.nupkg -k $NUGET_KEY -s https://nuget.org
+  script: 
+    - dotnet nuget push src/Badger.Data/nuget/Badger.Data.*.nupkg -k $NUGET_KEY -s https://nuget.org
+    - dotnet nuget push src/Badger.Data.Postgres/nuget/Badger.Data.Postgres.*.nupkg -k $NUGET_KEY -s https://nuget.org
   on:
     branch: master
