--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: csharp
 mono: none
-dotnet: 2.0.0
-dist: trusty
+dotnet: 3.1.200
+dist: bionic
 notifications:
   email:
     on_success: never
     on_failure: always
 env:
-    - PACKAGE_VERSION=1.0.$TRAVIS_BUILD_NUMBER
+    - PACKAGE_VERSION=2.0.$TRAVIS_BUILD_NUMBER
 services:
   - postgresql
 postgres:
