--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: csharp
 mono: none
-dotnet: 2.0.0
-dist: trusty
+dotnet: 3.1.200
+dist: bionic
 notifications:
   email:
     on_success: never
